--- a/bsd-libc/man/printf.textile
+++ b/bsd-libc/man/printf.textile
@@ -1,576 +1,481 @@
-The
+<hr />
 
-family of functions produces output according to a
+PRINTF(3) BSD Library Functions Manual PRINTF(3)
 
-as described below. The
+*NAME*
 
-and
+*printf*, *fprintf*, *sprintf*, *snprintf*, *asprintf*, *dprintf*, *vprintf*, *vfprintf*, *vsprintf*, *vsnprintf*, *vasprintf*, *vdprintf*  --  formatted output conversion
 
-functions write output to
+*LIBRARY*
 
-the standard output stream;
+Standard C Library (libc, −lc)
 
-and
+*SYNOPSIS*
 
-write output to the given output
+*#include &lt;stdio.h&gt;*
 
-and
+_int_
 
-write output to the given file descriptor;
+*printf*(_const char &#42; restrict format_, _..._);
 
-and
+_int_
 
-write to the character string
+*fprintf*(_FILE &#42; restrict stream_, _const char &#42; restrict format_, _..._);
 
-and
+_int_
 
-and
+*sprintf*(_char &#42; restrict str_, _const char &#42; restrict format_, _..._);
 
-dynamically allocate a new string with
+_int_
 
-These functions write the output under the control of a
+*snprintf*(_char &#42; restrict str_, _size&#95;t size_, _const char &#42; restrict format_, _..._);
 
-string that specifies how subsequent arguments (or arguments accessed via the variable&#45;length argument facilities of
+_int_
 
-are converted for output.
+*asprintf*(_char &#42;&#42;ret_, _const char &#42;format_, _..._);
 
-The
+_int_
 
-and
+*dprintf*(_int fd_, _const char &#42; restrict format_, _..._);
 
-functions set
+*#include &lt;stdarg.h&gt;*
 
-to be a pointer to a buffer sufficiently large to hold the formatted string. This pointer should be passed to
+_int_
 
-to release the allocated storage when it is no longer needed. If sufficient space cannot be allocated,
+*vprintf*(_const char &#42; restrict format_, _va&#95;list ap_);
 
-and
+_int_
 
-will return &#45;1 and set
+*vfprintf*(_FILE &#42; restrict stream_, _const char &#42; restrict format_, _va&#95;list ap_);
 
-to be a
+_int_
 
-pointer.
+*vsprintf*(_char &#42; restrict str_, _const char &#42; restrict format_, _va&#95;list ap_);
 
-The
+_int_
 
-and
+*vsnprintf*(_char &#42; restrict str_, _size&#95;t size_, _const char &#42; restrict format_, _va&#95;list ap_);
 
-functions will write at most
+_int_
 
-of the characters printed into the output string (the
+*vasprintf*(_char &#42;&#42;ret_, _const char &#42;format_, _va&#95;list ap_);
 
-character then gets the terminating
+_int_
 
-if the return value is greater than or equal to the
+*vdprintf*(_int fd_, _const char &#42; restrict format_, _va&#95;list ap_);
 
-argument, the string was too short and some of the printed characters were discarded. The output is always null&#45;terminated, unless
+*DESCRIPTION*
 
-is 0.
+The *printf*() family of functions produces output according to a _format_ as described below. The *printf*() and *vprintf*() functions write output to stdout, the standard output stream; *fprintf*() and *vfprintf*() write output to the given output _stream_; *dprintf*() and *vdprintf*() write output to the given file descriptor; *sprintf*(), *snprintf*(), *vsprintf*(), and *vsnprintf*() write to the character string _str_; and *asprintf*() and *vasprintf*() dynamically allocate a new string with malloc(3).
 
-The
+These functions write the output under the control of a _format_ string that specifies how subsequent arguments (or arguments accessed via the variable&#45;length argument facilities of stdarg(3)) are converted for output.
 
-and
+The *asprintf*() and *vasprintf*() functions set _&#42;ret_ to be a pointer to a buffer sufficiently large to hold the formatted string. This pointer should be passed to free(3) to release the allocated storage when it is no longer needed. If sufficient space cannot be allocated, *asprintf*() and *vasprintf*() will return −1 and set _ret_ to be a NULL pointer.
 
-functions effectively assume a
+The *snprintf*() and *vsnprintf*() functions will write at most _size_−1 of the characters printed into the output string (the _size_'th character then gets the terminating ‘\0'); if the return value is greater than or equal to the _size_ argument, the string was too short and some of the printed characters were discarded. The output is always null&#45;terminated, unless _size_ is 0.
 
-of
+The *sprintf*() and *vsprintf*() functions effectively assume a _size_ of INT&#95;MAX &#43; 1.
 
-The format string is composed of zero or more directives: ordinary characters (not
+The format string is composed of zero or more directives: ordinary characters (not *%*), which are copied unchanged to the output stream; and conversion specifications, each of which results in fetching zero or more subsequent arguments. Each conversion specification is introduced by the *%* character. The arguments must correspond properly (after type promotion) with the conversion specifier. After the *%*, the following appear in sequence:
 
-which are copied unchanged to the output stream; and conversion specifications, each of which results in fetching zero or more subsequent arguments. Each conversion specification is introduced by the
+*•*
 
-character. The arguments must correspond properly (after type promotion) with the conversion specifier. After the
+An optional field, consisting of a decimal digit string followed by a *$*, specifying the next argument to access. If this field is not provided, the argument following the last argument accessed will be used. Arguments are numbered starting at *1*. If unaccessed arguments in the format string are interspersed with ones that are accessed the results will be indeterminate.
 
-the following appear in sequence:
-
-An optional field, consisting of a decimal digit string followed by a
-
-specifying the next argument to access. If this field is not provided, the argument following the last argument accessed will be used. Arguments are numbered starting at
-
-If unaccessed arguments in the format string are interspersed with ones that are accessed the results will be indeterminate.
+*•*
 
 Zero or more of the following flags:
 
-The value should be converted to an
+‘*#*'
 
-For
+The value should be converted to an ‘‘alternate form''. For *c*, *d*, *i*, *n*, *p*, *s*, and *u* conversions, this option has no effect. For *o* conversions, the precision of the number is increased to force the first character of the output string to a zero. For *x* and *X* conversions, a non&#45;zero result has the string ‘0x' (or ‘0X' for *X* conversions) prepended to it. For *a*, *A*, *e*, *E*, *f*, *F*, *g*, and *G* conversions, the result will always contain a decimal point, even if no digits follow it (normally, a decimal point appears in the results of those conversions only if a digit follows). For *g* and *G* conversions, trailing zeros are not removed from the result as they would otherwise be.
 
-and
+‘ *
+0*' (zero)
 
-conversions, this option has no effect. For
+Zero padding. For all conversions except *n*, the converted value is padded on the left with zeros rather than blanks. If a precision is given with a numeric conversion (*d*, *i*, *o*, *u*, *i*, *x*, and *X*), the *0* flag is ignored.
 
-conversions, the precision of the number is increased to force the first character of the output string to a zero. For
+‘*−*'
 
-and
+A negative field width flag; the converted value is to be left adjusted on the field boundary. Except for *n* conversions, the converted value is padded on the right with blanks, rather than on the left with blanks or zeros. A *−* overrides a *0* if both are given.
 
-conversions, a non&#45;zero result has the string
+‘ ' (space)
 
-(or
+A blank should be left before a positive number produced by a signed conversion (*a*, *A*, *d*, *e*, *E*, *f*, *F*, *g*, *G*, or *i*).
 
-for
+‘*&#43;*'
 
-conversions) prepended to it. For
+A sign must always be placed before a number produced by a signed conversion. A *&#43;* overrides a space if both are used.
 
-and
+‘
+'' (apostrophe)
 
-conversions, the result will always contain a decimal point, even if no digits follow it (normally, a decimal point appears in the results of those conversions only if a digit follows). For
+Decimal conversions (*d*, *u*, or *i*) or the integral portion of a floating point conversion (*f* or *F*) should be grouped and separated by thousands using the non&#45;monetary separator returned by localeconv(3).
 
-and
-
-conversions, trailing zeros are not removed from the result as they would otherwise be.
-
-Zero padding. For all conversions except
-
-the converted value is padded on the left with zeros rather than blanks. If a precision is given with a numeric conversion
-
-and
-
-the
-
-flag is ignored.
-
-A negative field width flag; the converted value is to be left adjusted on the field boundary. Except for
-
-conversions, the converted value is padded on the right with blanks, rather than on the left with blanks or zeros. A
-
-overrides a
-
-if both are given.
-
-A blank should be left before a positive number produced by a signed conversion
-
-or
-
-A sign must always be placed before a number produced by a signed conversion. A
-
-overrides a space if both are used.
-
-Decimal conversions
-
-or
-
-or the integral portion of a floating point conversion
-
-or
-
-should be grouped and separated by thousands using the non&#45;monetary separator returned by
+*•*
 
 An optional decimal digit string specifying a minimum field width. If the converted value has fewer characters than the field width, it will be padded with spaces on the left (or right, if the left&#45;adjustment flag has been given) to fill out the field width.
 
-An optional precision, in the form of a period
+*•*
 
-followed by an optional digit string. If the digit string is omitted, the precision is taken as zero. This gives the minimum number of digits to appear for
+An optional precision, in the form of a period *.* followed by an optional digit string. If the digit string is omitted, the precision is taken as zero. This gives the minimum number of digits to appear for *d*, *i*, *o*, *u*, *x*, and *X* conversions, the number of digits to appear after the decimal&#45;point for *a*, *A*, *e*, *E*, *f*, and *F* conversions, the maximum number of significant digits for *g* and *G* conversions, or the maximum number of characters to be printed from a string for *s* conversions.
 
-and
+*•*
 
-conversions, the number of digits to appear after the decimal&#45;point for
+An optional length modifier, that specifies the size of the argument. The following length modifiers are valid for the *d*, *i*, *n*, *o*, *u*, *x*, or *X* conversion:
 
-and
+*Modifier d*, *i o*, *u*, *x*, *X n
+hh* _signed char unsigned char signed char &#42;_ *
+h* _short unsigned short short &#42;_ *
+l* (ell) _long unsigned long long &#42;_ *
+ll* (ell ell) _long long unsigned long long long long &#42;_ *
+j* _intmax&#95;t uintmax&#95;t intmax&#95;t &#42;_ *
+t* _ptrdiff&#95;t_ (see note) _ptrdiff&#95;t &#42;_ *
+z* (see note) _size&#95;t_ (see note) *
+q* _(deprecated) quad&#95;t u&#95;quad&#95;t quad&#95;t &#42;_
 
-conversions, the maximum number of significant digits for
+Note: the *t* modifier, when applied to a *o*, *u*, *x*, or *X* conversion, indicates that the argument is of an unsigned type equivalent in size to a _ptrdiff&#95;t_. The *z* modifier, when applied to a *d* or *i* conversion, indicates that the argument is of a signed type equivalent in size to a _size&#95;t_. Similarly, when applied to an *n* conversion, it indicates that the argument is a pointer to a signed type equivalent in size to a _size&#95;t_.
 
-and
+The following length modifier is valid for the *a*, *A*, *e*, *E*, *f*, *F*, *g*, or *G* conversion:
 
-conversions, or the maximum number of characters to be printed from a string for
+*Modifier a*, *A*, *e*, *E*, *f*, *F*, *g*, *G
+l* (ell) _double_ (ignored, same behavior as without it) *
+L* _long double_
 
-conversions.
+The following length modifier is valid for the *c* or *s* conversion:
 
-An optional length modifier, that specifies the size of the argument. The following length modifiers are valid for the
+*Modifier c s
+l* (ell) _wint&#95;t wchar&#95;t &#42;_
 
-or
-
-conversion:
-
-Note: the
-
-modifier, when applied to a
-
-or
-
-conversion, indicates that the argument is of an unsigned type equivalent in size to a
-
-The
-
-modifier, when applied to a
-
-or
-
-conversion, indicates that the argument is of a signed type equivalent in size to a
-
-Similarly, when applied to an
-
-conversion, it indicates that the argument is a pointer to a signed type equivalent in size to a
-
-The following length modifier is valid for the
-
-or
-
-conversion:
-
-(ignored, same behavior as without it)
-
-The following length modifier is valid for the
-
-or
-
-conversion:
+*•*
 
 A character that specifies the type of conversion to be applied.
 
-A field width or precision, or both, may be indicated by an asterisk
-
-or an asterisk followed by one or more decimal digits and a
-
-instead of a digit string. In this case, an
-
-argument supplies the field width or precision. A negative field width is treated as a left adjustment flag followed by a positive field width; a negative precision is treated as though it were missing. If a single format directive mixes positional
-
-and non&#45;positional arguments, the results are undefined.
+A field width or precision, or both, may be indicated by an asterisk ‘&#42;' or an asterisk followed by one or more decimal digits and a ‘$' instead of a digit string. In this case, an _int_ argument supplies the field width or precision. A negative field width is treated as a left adjustment flag followed by a positive field width; a negative precision is treated as though it were missing. If a single format directive mixes positional (nn$) and non&#45;positional arguments, the results are undefined.
 
 The conversion specifiers and their meanings are:
 
-The
+*diouxX*
 
-(or appropriate variant) argument is converted to signed decimal
+The _int_ (or appropriate variant) argument is converted to signed decimal (*d* and *i*), unsigned octal (*o*), unsigned decimal (*u*), or unsigned hexadecimal (*x* and *X*) notation. The letters ‘‘abcdef'' are used for *x* conversions; the letters ‘‘ABCDEF'' are used for *X* conversions. The precision, if any, gives the minimum number of digits that must appear; if the converted value requires fewer digits, it is padded on the left with zeros.
 
-and
+*DOU*
 
-unsigned octal
+The _long int_ argument is converted to signed decimal, unsigned octal, or unsigned decimal, as if the format had been *ld*, *lo*, or *lu* respectively. These conversion characters are deprecated, and will eventually disappear.
 
-unsigned decimal
+*eE*
 
-or unsigned hexadecimal
+The _double_ argument is rounded and converted in the style [
 
-and
+− ]_d_._ddd_e±_dd_ where there is one digit before the decimal&#45;point character and the number of digits after it is equal to the precision; if the precision is missing, it is taken as 6; if the precision is zero, no decimal&#45;point character appears. An *E* conversion uses the letter ‘E' (rather than ‘e') to introduce the exponent. The exponent always contains at least two digits; if the value is zero, the exponent is 00.
 
-notation. The letters
+For *a*, *A*, *e*, *E*, *f*, *F*, *g*, and *G* conversions, positive and negative infinity are represented as inf and &#45;inf respectively when using the lowercase conversion character, and INF and &#45;INF respectively when using the uppercase conversion character. Similarly, NaN is represented as nan when using the lowercase conversion, and NAN when using the uppercase conversion.
 
-are used for
+*fF*
 
-conversions; the letters
+The _double_ argument is rounded and converted to decimal notation in the style [
 
-are used for
+− ]_ddd_._ddd_, where the number of digits after the decimal&#45;point character is equal to the precision specification. If the precision is missing, it is taken as 6; if the precision is explicitly zero, no decimal&#45;point character appears. If a decimal point appears, at least one digit appears before it.
 
-conversions. The precision, if any, gives the minimum number of digits that must appear; if the converted value requires fewer digits, it is padded on the left with zeros.
+*gG*
 
-The
+The _double_ argument is converted in style *f* or *e* (or *F* or *E* for *G* conversions). The precision specifies the number of significant digits. If the precision is missing, 6 digits are given; if the precision is zero, it is treated as 1. Style *e* is used if the exponent from its conversion is less than −4 or greater than or equal to the precision. Trailing zeros are removed from the fractional part of the result; a decimal point appears only if it is followed by at least one digit.
 
-argument is converted to signed decimal, unsigned octal, or unsigned decimal, as if the format had been
+*aA*
 
-or
+The _double_ argument is rounded and converted to hexadecimal notation in the style [
 
-respectively. These conversion characters are deprecated, and will eventually disappear.
+− ]0x_h_._hhhp_[
+± ]_d_, where the number of digits after the hexadecimal&#45;point character is equal to the precision specification. If the precision is missing, it is taken as enough to represent the floating&#45;point number exactly, and no rounding occurs. If the precision is zero, no hexadecimal&#45;point character appears. The *p* is a literal character ‘p', and the exponent consists of a positive or negative sign followed by a decimal number representing an exponent of 2. The *A* conversion uses the prefix ‘‘0X'' (rather than ‘‘0x''), the letters ‘‘ABCDEF'' (rather than ‘‘abcdef'') to represent the hex digits, and the letter ‘P' (rather than ‘p') to separate the mantissa and exponent.
 
-The
+Note that there may be multiple valid ways to represent floating&#45;point numbers in this hexadecimal format. For example, 0x1.92p&#43;1, 0x3.24p&#43;0, 0x6.48p&#45;1, and 0xc.9p&#45;2 are all equivalent. FreeBSD 8.0 and later always prints finite non&#45;zero numbers using ‘1' as the digit before the hexadecimal point. Zeroes are always represented with a mantissa of 0 (preceded by a ‘&#45;' if appropriate) and an exponent of &#43;0.
 
-argument is rounded and converted in the style
+*C*
 
-where there is one digit before the decimal&#45;point character and the number of digits after it is equal to the precision; if the precision is missing, it is taken as 6; if the precision is zero, no decimal&#45;point character appears. An
+Treated as *c* with the *l* (ell) modifier.
 
-conversion uses the letter
+*c*
 
-(rather than
+The _int_ argument is converted to an _unsigned char_, and the resulting character is written.
 
-to introduce the exponent. The exponent always contains at least two digits; if the value is zero, the exponent is 00.
+If the *l* (ell) modifier is used, the _wint&#95;t_ argument shall be converted to a _wchar&#95;t_, and the (potentially multi&#45;byte) sequence representing the single wide character is written, including any shift sequences. If a shift sequence is used, the shift state is also restored to the original state after the character.
 
-For
+*S*
 
-and
+Treated as *s* with the *l* (ell) modifier.
 
-conversions, positive and negative infinity are represented as
+*s*
 
-and
+The _char &#42;_ argument is expected to be a pointer to an array of character type (pointer to a string). Characters from the array are written up to (but not including) a terminating NUL character; if a precision is specified, no more than the number specified are written. If a precision is given, no null character need be present; if the precision is not specified, or is greater than the size of the array, the array must contain a terminating NUL character.
 
-respectively when using the lowercase conversion character, and
+If the *l* (ell) modifier is used, the _wchar&#95;t &#42;_ argument is expected to be a pointer to an array of wide characters (pointer to a wide string). For each wide character in the string, the (potentially multi&#45;byte) sequence representing the wide character is written, including any shift sequences. If any shift sequence is used, the shift state is also restored to the original state after the string. Wide characters from the array are written up to (but not including) a terminating wide NUL character; if a precision is specified, no more than the number of bytes specified are written (including shift sequences). Partial characters are never written. If a precision is given, no null character need be present; if the precision is not specified, or is greater than the number of bytes required to render the multibyte representation of the string, the array must contain a terminating wide NUL character.
 
-and
+*p*
 
-respectively when using the uppercase conversion character. Similarly, NaN is represented as
+The _void &#42;_ pointer argument is printed in hexadecimal (as if by ‘%#x' or ‘%#lx').
 
-when using the lowercase conversion, and
+*n*
 
-when using the uppercase conversion.
+The number of characters written so far is stored into the integer indicated by the _int &#42;_ (or variant) pointer argument. No argument is converted.
 
-The
+*m*
 
-argument is rounded and converted to decimal notation in the style
+Print the string representation of the error code stored in the errno variable at the beginning of the call, as returned by strerror(3). No argument is taken.
 
-where the number of digits after the decimal&#45;point character is equal to the precision specification. If the precision is missing, it is taken as 6; if the precision is explicitly zero, no decimal&#45;point character appears. If a decimal point appears, at least one digit appears before it.
+*%*
 
-The
+A ‘%' is written. No argument is converted. The complete conversion specification is ‘%%'.
 
-argument is converted in style
-
-or
-
-(or
-
-or
-
-for
-
-conversions). The precision specifies the number of significant digits. If the precision is missing, 6 digits are given; if the precision is zero, it is treated as 1. Style
-
-is used if the exponent from its conversion is less than &#45;4 or greater than or equal to the precision. Trailing zeros are removed from the fractional part of the result; a decimal point appears only if it is followed by at least one digit.
-
-The
-
-argument is rounded and converted to hexadecimal notation in the style
-
-where the number of digits after the hexadecimal&#45;point character is equal to the precision specification. If the precision is missing, it is taken as enough to represent the floating&#45;point number exactly, and no rounding occurs. If the precision is zero, no hexadecimal&#45;point character appears. The
-
-is a literal character
-
-and the exponent consists of a positive or negative sign followed by a decimal number representing an exponent of 2. The
-
-conversion uses the prefix
-
-(rather than
-
-the letters
-
-(rather than
-
-to represent the hex digits, and the letter
-
-(rather than
-
-to separate the mantissa and exponent.
-
-Note that there may be multiple valid ways to represent floating&#45;point numbers in this hexadecimal format. For example,
-
-and
-
-are all equivalent.
-
-and later always prints finite non&#45;zero numbers using
-
-as the digit before the hexadecimal point. Zeroes are always represented with a mantissa of 0 (preceded by a
-
-if appropriate) and an exponent of
-
-Treated as
-
-with the
-
-(ell) modifier.
-
-The
-
-argument is converted to an
-
-and the resulting character is written.
-
-If the
-
-(ell) modifier is used, the
-
-argument shall be converted to a
-
-and the (potentially multi&#45;byte) sequence representing the single wide character is written, including any shift sequences. If a shift sequence is used, the shift state is also restored to the original state after the character.
-
-Treated as
-
-with the
-
-(ell) modifier.
-
-The
-
-argument is expected to be a pointer to an array of character type (pointer to a string). Characters from the array are written up to (but not including) a terminating
-
-character; if a precision is specified, no more than the number specified are written. If a precision is given, no null character need be present; if the precision is not specified, or is greater than the size of the array, the array must contain a terminating
-
-character.
-
-If the
-
-(ell) modifier is used, the
-
-argument is expected to be a pointer to an array of wide characters (pointer to a wide string). For each wide character in the string, the (potentially multi&#45;byte) sequence representing the wide character is written, including any shift sequences. If any shift sequence is used, the shift state is also restored to the original state after the string. Wide characters from the array are written up to (but not including) a terminating wide
-
-character; if a precision is specified, no more than the number of bytes specified are written (including shift sequences). Partial characters are never written. If a precision is given, no null character need be present; if the precision is not specified, or is greater than the number of bytes required to render the multibyte representation of the string, the array must contain a terminating wide
-
-character.
-
-The
-
-pointer argument is printed in hexadecimal (as if by
-
-or
-
-The number of characters written so far is stored into the integer indicated by the
-
-(or variant) pointer argument. No argument is converted.
-
-Print the string representation of the error code stored in the
-
-variable at the beginning of the call, as returned by
-
-No argument is taken.
-
-A
-
-is written. No argument is converted. The complete conversion specification is
-
-The decimal point character is defined in the program's locale (category
+The decimal point character is defined in the program's locale (category LC&#95;NUMERIC).
 
 In no case does a non&#45;existent or small field width cause truncation of a numeric field; if the result of a conversion is wider than the field width, the field is expanded to contain the conversion result.
 
-These functions return the number of characters printed (not including the trailing
+*RETURN VALUES*
 
-used to end output to strings), except for
+These functions return the number of characters printed (not including the trailing ‘\0' used to end output to strings), except for *snprintf*() and *vsnprintf*(), which return the number of characters that would have been printed if the _size_ were unlimited (again, not including the final ‘\0'). These functions return a negative value if an error occurs.
 
-and
+*EXAMPLES*
 
-which return the number of characters that would have been printed if the
+To print a date and time in the form ‘‘Sunday, July 3, 10:02'', where _weekday_ and _month_ are pointers to strings:
 
-were unlimited (again, not including the final
+#include &lt;stdio.h&gt;
+fprintf(stdout, &quot;%s, %s %d, %.2d:%.2d\n&quot;,
 
-These functions return a negative value if an error occurs.
+<table>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">weekday, month, day, hour, min);
+</td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
 
-To print a date and time in the form
+To print pi to five decimal places:
 
-where
-
-and
-
-are pointers to strings:
-
-#include &lt;stdio.h&gt; fprintf(stdout, &quot;%s, %s %d, %.2d:%.2d\n&quot;, weekday, month, day, hour, min);
-
-To print to five decimal places:
-
-#include &lt;math.h&gt; #include &lt;stdio.h&gt; fprintf(stdout, &quot;pi = %.5f\n&quot;, 4 &#42; atan(1.0));
+#include &lt;math.h&gt;
+#include &lt;stdio.h&gt;
+fprintf(stdout, &quot;pi = %.5f\n&quot;, 4 &#42; atan(1.0));
 
 To allocate a 128 byte string and print into it:
 
-#include &lt;stdio.h&gt; #include &lt;stdlib.h&gt; #include &lt;stdarg.h&gt; char &#42;newfmt(const char &#42;fmt, ...) { char &#42;p; va&#95;list ap; if ((p = malloc(128)) == NULL) return (NULL); va&#95;start(ap, fmt); (void) vsnprintf(p, 128, fmt, ap); va&#95;end(ap); return (p); }
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;stdarg.h&gt;
+char &#42;newfmt(const char &#42;fmt, ...)
+{
 
-The conversion formats
+<table>
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">char &#42;p;
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">va&#95;list ap;
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">if ((p = malloc(128)) == NULL)
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left">return (NULL);
+</td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">va&#95;start(ap, fmt);
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">(void) vsnprintf(p, 128, fmt, ap);
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">va&#95;end(ap);
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">return (p);
+</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
 
-and
+}
 
-are not standard and are provided only for backward compatibility. The conversion format
+*COMPATIBILITY*
 
-is also not standard and provides the popular extension from the
+The conversion formats *%D*, *%O*, and *%U* are not standard and are provided only for backward compatibility. The conversion format *%m* is also not standard and provides the popular extension from the GNU C library.
 
-library.
+The effect of padding the *%p* format with zeros (either by the *0* flag or by specifying a precision), and the benign effect (i.e., none) of the *#* flag on *%n* and *%p* conversions, as well as other nonsensical combinations such as *%Ld*, are not standard; such combinations should be avoided.
 
-The effect of padding the
+*ERRORS*
 
-format with zeros (either by the
+In addition to the errors documented for the write(2) system call, the *printf*() family of functions may fail if:
 
-flag or by specifying a precision), and the benign effect (i.e., none) of the
-
-flag on
-
-and
-
-conversions, as well as other nonsensical combinations such as
-
-are not standard; such combinations should be avoided.
-
-In addition to the errors documented for the
-
-system call, the
-
-family of functions may fail if:
+[EILSEQ]
 
 An invalid wide character code was encountered.
 
+[ENOMEM]
+
 Insufficient storage space is available.
 
-The
+[EOVERFLOW]
 
-argument exceeds
+The _size_ argument exceeds INT&#95;MAX &#43; 1, or the return value would be too large to be represented by an _int_.
 
-or the return value would be too large to be represented by an
+*SEE ALSO*
 
-Subject to the caveats noted in the
+printf(1), errno(2), fmtcheck(3), scanf(3), setlocale(3), strerror(3), wprintf(3)
 
-section below, the
+*STANDARDS*
 
-and
+Subject to the caveats noted in the _BUGS_ section below, the *fprintf*(), *printf*(), *sprintf*(), *vprintf*(), *vfprintf*(), and *vsprintf*() functions conform to ANSI X3.159&#45;1989 (‘‘ANSI C89'') and ISO/IEC 9899:1999 (‘‘ISO C99''). With the same reservation, the *snprintf*() and *vsnprintf*() functions conform to ISO/IEC 9899:1999 (‘‘ISO C99''), while *dprintf*() and *vdprintf*() conform to IEEE Std 1003.1&#45;2008 (‘‘POSIX.1'').
 
-functions conform to
+*HISTORY*
 
-and
+The functions *asprintf*() and *vasprintf*() first appeared in the GNU C library. These were implemented by Peter Wemm &lt;_peter&#64;FreeBSD.org_&gt; in FreeBSD 2.2, but were later replaced with a different implementation from OpenBSD 2.3 by Todd C. Miller &lt;_Todd.Miller&#64;courtesan.com_&gt;. The *dprintf*() and *vdprintf*() functions were added in FreeBSD 8.0. The *%m* format extension first appeared in the GNU C library, and was implemented in FreeBSD 12.0.
 
-With the same reservation, the
+*BUGS*
 
-and
+The *printf* family of functions do not correctly handle multibyte characters in the _format_ argument.
 
-functions conform to
+*SECURITY CONSIDERATIONS*
 
-while
+The *sprintf*() and *vsprintf*() functions are easily misused in a manner which enables malicious users to arbitrarily change a running program's functionality through a buffer overflow attack. Because *sprintf*() and *vsprintf*() assume an infinitely long string, callers must be careful not to overflow the actual space; this is often hard to assure. For safety, programmers should use the *snprintf*() interface instead. For example:
 
-and
+void
+foo(const char &#42;arbitrary&#95;string, const char &#42;and&#95;another)
+{
 
-conform to
+<table>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">char onstack[8];
+</td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
 
-The functions
+#ifdef BAD
 
-and
+<table>
+<col width="50%" />
+<col width="50%" />
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">/&#42;
+</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">&#42; This first sprintf is bad behavior. Do not use sprintf!
+</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">&#42;/
+</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">sprintf(onstack, &quot;%s, %s&quot;, arbitrary&#95;string, and&#95;another);
+</td>
+</tr>
+</tbody>
+</table>
 
-first appeared in the
+#else
 
-library. These were implemented by
+<table>
+<col width="50%" />
+<col width="50%" />
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">/&#42;
+</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">&#42; The following two lines demonstrate better use of
+</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">&#42; snprintf().
+</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">&#42;/
+</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">snprintf(onstack, sizeof(onstack), &quot;%s, %s&quot;, arbitrary&#95;string,
+</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">and&#95;another);
+</td>
+</tr>
+</tbody>
+</table>
 
-in
+#endif
+}
 
-but were later replaced with a different implementation from
+The *printf*() and *sprintf*() family of functions are also easily misused in a manner allowing malicious users to arbitrarily change a running program's functionality by either causing the program to print potentially sensitive data ‘‘left on the stack'', or causing it to generate a memory fault or bus error by dereferencing an invalid pointer.
 
-by
-
-The
-
-and
-
-functions were added in
-
-The
-
-format extension first appeared in the
-
-library, and was implemented in
-
-The
-
-family of functions do not correctly handle multibyte characters in the
-
-argument.
-
-The
-
-and
-
-functions are easily misused in a manner which enables malicious users to arbitrarily change a running program's functionality through a buffer overflow attack. Because
-
-and
-
-assume an infinitely long string, callers must be careful not to overflow the actual space; this is often hard to assure. For safety, programmers should use the
-
-interface instead. For example:
-
-void foo(const char &#42;arbitrary&#95;string, const char &#42;and&#95;another) { char onstack[8];
-
-#ifdef BAD /&#42; &#42; This first sprintf is bad behavior. Do not use sprintf! &#42;/ sprintf(onstack, &quot;%s, %s&quot;, arbitrary&#95;string, and&#95;another); #else /&#42; &#42; The following two lines demonstrate better use of &#42; snprintf(). &#42;/ snprintf(onstack, sizeof(onstack), &quot;%s, %s&quot;, arbitrary&#95;string, and&#95;another); #endif }
-
-The
-
-and
-
-family of functions are also easily misused in a manner allowing malicious users to arbitrarily change a running program's functionality by either causing the program to print potentially sensitive data
-
-or causing it to generate a memory fault or bus error by dereferencing an invalid pointer.
-
-can be used to write arbitrary data to potentially carefully&#45;selected addresses. Programmers are therefore strongly advised to never pass untrusted strings as the
-
-argument, as an attacker can put format specifiers in the string to mangle your stack, leading to a possible security hole. This holds true even if the string was built using a function like
-
-as the resulting string may still contain user&#45;supplied conversion specifiers for later interpolation by
+*%n* can be used to write arbitrary data to potentially carefully&#45;selected addresses. Programmers are therefore strongly advised to never pass untrusted strings as the _format_ argument, as an attacker can put format specifiers in the string to mangle your stack, leading to a possible security hole. This holds true even if the string was built using a function like *snprintf*(), as the resulting string may still contain user&#45;supplied conversion specifiers for later interpolation by *printf*().
 
 Always use the proper secure idiom:
+
+snprintf(buffer, sizeof(buffer), &quot;%s&quot;, string);
+
+BSD May 22, 2018 BSD
+
+<hr />
 
