--- a/README
+++ b/README
@@ -16,3 +16,10 @@ I did have these documentation originally within the minilib git,
 but uploading a huge bunch of documentation into a "mini"-lib repository
 doesn't seem so wise.
 
+
+Great: https://github.com/susam/lab/tree/master/c
+  Small examples
+
+
+
+
