Added linkedlist discussion

--- a/README
+++ b/README
@@ -23,3 +23,5 @@ Great: https://github.com/susam/lab/tree/master/c
 
 
 
+Good regarding programming in general:
+    https://en.wikipedia.org/wiki/Brainfuck
